[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Rockets/Rockets.gd" type="Script" id=2]
[ext_resource path="res://Rockets/Rocket_trail.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.94314, 7.9104 )

[node name="Rocket" type="Area2D"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
scale = Vector2( 2, 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Rocket" type="Sprite" parent="."]
scale = Vector2( 0.063, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Rocket_trail" parent="." instance=ExtResource( 3 )]
z_index = -2
width = 10.0
width_curve = null
default_color = Color( 0.4, 0.501961, 1, 1 )
min_spwan_distance = 10.0

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Rocket_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
